--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="yandex-verification" content="bb1b32e2e8227776" />
+    <title></title>
+</head>
+<body>
+
+</body>
+</html>
