Added noindex meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="yandex-verification" content="bb1b32e2e8227776" />
+    <meta name="robots" content="noindex" />
     <meta name="google-site-verification" content="I4GoV9fqVl-8TLHlhFRaIyNkpbAHCyUQ4B1jTM0PYlc" />
     <title></title>
 </head>
